some fixing and changes

--- a/src/containers/Home/Home.css
+++ b/src/containers/Home/Home.css
@@ -1,11 +1,19 @@
 .Home{
-  position: relative;
+  /* position: fixed;
   transition: all 0.3s;
   height: calc(100vh - 50px);
   width: 100%;
   overflow-y: scroll;
   box-sizing: border-box;
-  margin-top: 50px;
+  margin-top: 51px; */
+
+  position: fixed;
+  transition: all 0.3s;
+  display: block;
+  overflow-y: scroll;
+  height: calc(100vh - 50px);
+  width: 100%;
+  margin-top: 51px;
 }
 
 
