--- a/src/components/Home/Chat/ChatItem/ChatItem.css
+++ b/src/components/Home/Chat/ChatItem/ChatItem.css
@@ -32,8 +32,7 @@
 
 .ChatItem img{
     height: 40px;
-    width: 40px;
-    border-radius: 50%;
+    /* border-radius: 50%; */
     display: inline-block;
     margin-right: 10px;
 }
