--- a/src/components/Home/Chat/PersonalChat/Chat.css
+++ b/src/components/Home/Chat/PersonalChat/Chat.css
@@ -1,7 +1,7 @@
 .Chat{
     box-sizing: border-box;
     width: 100%;
-    height: 100%;
+    height: auto;
     overflow-y: auto;
     padding: 0px 20px;
 }
