--- a/src/containers/Profile/Profile.css
+++ b/src/containers/Profile/Profile.css
@@ -5,7 +5,7 @@
     overflow-y: scroll;
     height: calc(100vh - 50px);
     width: 100%;
-    margin-top: 51px;
+    /* margin-top: 51px; */
 }
 
 .Dark {
