--- a/src/components/UI/Footer/Footer.css
+++ b/src/components/UI/Footer/Footer.css
@@ -4,19 +4,22 @@
     bottom: 0px;
     left: 0;
     height: 50px;
+    z-index: 210;
     background-color: white;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
 
+.Buttons{
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+.Icon{
+    color: #4FC4F6;
+}
 
 .Dark {
     background-color: #202124;
-}
-
-.Icon{
-    color: #4FC4F6;
 }
