--- a/src/components/Home/MainSection/CreatePost/CreatePost.css
+++ b/src/components/Home/MainSection/CreatePost/CreatePost.css
@@ -4,7 +4,7 @@
     padding: 20px;
     min-width: 300px;
     max-width: 550px;
-    border-radius: 15px;
+    border-radius: 5px;
     /* margin: 0 5px; */
     margin: 0px auto 10px auto;
     background-color: white;
@@ -13,6 +13,7 @@
     transition: all 0.3s;
     overflow-y: scroll;
     max-height: 600px;
+    overflow-x: clip;
 }
 
 .CreateFeed::-webkit-scrollbar{
