--- a/src/components/UI/Modal/Modal.css
+++ b/src/components/UI/Modal/Modal.css
@@ -6,6 +6,7 @@
     top: 10%;
     box-sizing: border-box;
     transition: all 0.2s ease-out;
+    overflow-x: clip;
 }
 
 @media (min-width: 600px) {
