--- a/src/components/UI/LoadingPage/LoadingPage.css
+++ b/src/components/UI/LoadingPage/LoadingPage.css
@@ -1,11 +1,14 @@
 .LoadingPage{
-    position: fixed;
-    height: 100%;
-    width: 100%;
-    background-color: cornflowerblue;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: cornflowerblue;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 500;
 }
 
 .content{
