--- a/src/containers/About/About.css
+++ b/src/containers/About/About.css
@@ -4,6 +4,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    color: black;
 }
 
 .Dark h2, .Dark p, .Dark h3, .Dark .Icons {
@@ -15,9 +16,17 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    max-width: 80vw;
 }
 
 .Normie{
     display: flex;
     align-items: center;
+    margin: 5px;
+}
+
+.Part{
+    border: 1px solid cornflowerblue;
+    padding: 3px;
+    border-radius: 7px;
 }
