some fixing in user profile

--- a/src/components/Home/LeftPanel/Profile/Profile.css
+++ b/src/components/Home/LeftPanel/Profile/Profile.css
@@ -27,7 +27,10 @@
 }
 .InfoBox img{
     height: 50px;
+    width: 50px;
     border-radius: 50%;
+    object-fit: cover;
+    object-position: top;
 }
 .stats{
     display: flex;
