--- a/src/components/UI/ImageLoading/ImageLoading.css
+++ b/src/components/UI/ImageLoading/ImageLoading.css
@@ -1,5 +1,5 @@
 .ImageLoading {
-    height:220px;
+    height:100%;
     background:grey;
     width:100%;
     z-index:0;
@@ -12,10 +12,10 @@
     top:0;
     transform:translateX(100%);
     width:100%;
-    height:220px;
+    height:100%;
     position: absolute;
     z-index:1;
-    animation: slide 1s infinite;
+    animation: slide 2s infinite;
         
     background: -moz-linear-gradient(left, rgba(255,255,255,0) 0%, rgba(255,255,255,0.8) 50%, rgba(128,186,232,0) 99%, rgba(125,185,232,0) 100%); /* FF3.6+ */
     background: -webkit-gradient(linear, left top, right top, color-stop(0%,rgba(255,255,255,0)), color-stop(50%,rgba(255,255,255,0.8)), color-stop(99%,rgba(128,186,232,0)), color-stop(100%,rgba(125,185,232,0))); /* Chrome,Safari4+ */
