some css fixing

--- a/src/components/Home/MainSection/CreatePost/CreatePost.css
+++ b/src/components/Home/MainSection/CreatePost/CreatePost.css
@@ -66,9 +66,11 @@
 
 .Type img{
     padding-left: 0.1vw;
-    height: 50px;
-    width: 50px;
+    max-height: 50px;
+    max-width: 50px;
     border-radius: 50%;
+    object-fit: cover;
+    object-position: top;
 }
 
 .Type textarea{
