--- a/src/components/Home/MainSection/Feed/Post/Post.css
+++ b/src/components/Home/MainSection/Feed/Post/Post.css
@@ -67,6 +67,8 @@
     width: 35px;
     border-radius: 50%;
     border: 0.5px solid lightgray;
+    object-fit: cover;
+    object-position: top;
 }
 
 
