--- a/src/containers/Profile/Profile.css
+++ b/src/containers/Profile/Profile.css
@@ -21,7 +21,7 @@
 }
 
 .emptyBox{
-    height: 100vh;
+    height: 100%;
     width: 100vw;
 }
 
@@ -29,5 +29,11 @@
     .main{
         flex-direction: column;
         align-items: center;
+    }
+}
+
+@media (max-width: 700px) {
+    .emptyBox{
+        height: calc(100% - 50px);
     }
 }
